Fix details/summary block
It seems like the details/summary block has two different problems:

1. If a list is being used in the details block every item gets the marker.
2. The '▶' and '▼' do not have the same width, which meant that there was a small layout shift.

--- a/themes/monospace-web/assets/scss/_monospace-web.scss
+++ b/themes/monospace-web/assets/scss/_monospace-web.scss
@@ -237,14 +237,13 @@ details[open] summary {
   margin-bottom: var(--line-height);
 }
 
-details ::marker {
-  display: inline-block;
-  content: '▶';
+details summary::marker {
+  content: '► ';
   margin: 0;
 }
 
-details[open] ::marker {
-  content: '▼';
+details[open] summary::marker {
+  content: '▼ ';
 }
 
 details :last-child {
